--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "react-images",
-  "version": "0.3.2",
+  "name": "react-images-look",
+  "version": "0.4.3",
   "description": "A simple, responsive lightbox component for displaying an array of images with React.js",
   "main": "lib/Lightbox.js",
   "author": "Joss Mackison",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jossmac/react-images.git"
+    "url": "git+https://github.com/newsiberian/react-images.git"
   },
   "dependencies": {
-    "jss": "^3.2.0",
-    "jss-camel-case": "^1.0.0",
-    "jss-nested": "^1.0.1",
-    "jss-px": "^1.0.0",
-    "jss-vendor-prefixer": "^1.0.1",
-    "react": "^0.14.6",
-    "react-addons-transition-group": "^0.14.2",
-    "react-dom": "^0.14.6",
-    "react-jss": "^2.0.1",
+    "react": "^15.0.0",
+    "react-addons-transition-group": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-swipeable": "^3.1.0"
   },
   "devDependencies": {
@@ -31,7 +25,7 @@
     "react-component-gulp-tasks": "^0.7.0"
   },
   "peerDependencies": {
-    "react": ">=0.14"
+    "react": "^15.0.0"
   },
   "browserify-shim": {
     "react": "global:React"
@@ -49,7 +43,7 @@
     "watch": "gulp watch:lib"
   },
   "bugs": {
-    "url": "https://github.com/jossmac/react-images/issues"
+    "url": "https://github.com/newsiberian/react-images/issues"
   },
   "keywords": [
     "react",
